--- a/gcc-arm-embedded/gcc-arm-embedded.nuspec
+++ b/gcc-arm-embedded/gcc-arm-embedded.nuspec
@@ -6,8 +6,17 @@
     <version>7.2.1.20170904</version>
     <authors>TerryGuo JoeyYe ThomasPreudhomme KennyKoller ThomasGrieger</authors>
     <owners>distantcam</owners>
-    <description>Pre-built GNU toolchain from ARM Cortex-M and Cortex-R processors (Cortex-M0/M0+/M3/M4, Cortex-R4/R5/R7).</description>
+    <summary>Pre-built GNU toolchain from ARM Cortex-M and Cortex-R processors</summary>
+    <description>
+      The GNU Embedded Toolchain for Arm is a ready-to-use, open source suite of tools for C, C++ and Assembly programming
+      targeting Arm Cortex-M and Cortex-R family of processors. It includes the GNU Compiler (GCC) and is available free of
+      charge directly from Arm for embedded software development on Windows</description>
+    <licenseUrl>https://developer.arm.com/GetEula?Id=b8689563-35c9-4da7-b0cf-9c21f422343c</licenseUrl>
     <projectUrl>https://developer.arm.com/open-source/gnu-toolchain/gnu-rm</projectUrl>
+    <bugTrackerUrl>https://bugs.launchpad.net/gcc-arm-embedded</bugTrackerUrl>
+    <mailingListUrl>https://community.arm.com/groups/tools</mailingListUrl>
+    <projectSourceUrl>https://developer.arm.com/open-source/gnu-toolchain/gnu-rm</projectSourceUrl>
+    <releaseNotes>https://developer.arm.com/open-source/gnu-toolchain/gnu-rm/downloads</releaseNotes>
     <tags>gnu gcc arm embedded</tags>
   </metadata>
   <files>
